--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <title>Fungi | Consultant Portfolio Template</title>
+    <title>Home - TheOluBabs </title>
 </head>
-<body data-bs-spy="scroll" data-bs-target="#site-navbar" class="home-consultant">
+<body data-bs-spy="scroll" data-bs-target="#site-navbar" class="home-consultant dark-mode">
 
 	<!-- PRE LOADER -->
 	<div class="preloader js-preloader flex-center">
@@ -86,7 +86,7 @@
 				
 				<div class="row d-flex align-items-center">
 					<div class="col-xl-6 content-block">
-						<h1><span>Hello, I'm</span>James <strong>Anderson</strong></h1>
+						<h1><span>Hello, I am</span> Isaac <strong></strong></h1>
 						<p>
 							A Consultant who work to grow <br>your <span class="typer" id="main" data-words="Business, Startup, Brand" data-delay="100" data-deleteDelay="1000"></span>
 						</p>
